# email_hoover

./: .env.example  .gitignore  README.md  pyproject.toml
app/: config.py  db.py  main.py
app/discovery/: __init__.py  newsletters.py
app/gmail/: __init__.py  auth.py  client.py  oauth.py
app/models/: __init__.py  candidate.py  rule.py  run_log.py
app/services/: __init__.py  discovery.py  executor.py  rules.py  scheduler.py
app/templates/: base.html  dashboard.html
app/templates/partials/: candidate_list.html  exceptions.html  rule_editor.html  rule_workspace.html  run_log.html
app/web/: routes.py
docs/: session-context-2026-03-26.md
docs/superpowers/plans/: 2026-03-25-gmail-oauth-connect.md  2026-03-25-stale-newsletter-cleanup.md
docs/superpowers/specs/: 2026-03-25-gmail-oauth-connect-design.md  2026-03-25-stale-newsletter-cleanup-design.md
tests/: test_app_health.py  test_dashboard_routes.py  test_executor.py  test_gmail_client.py  test_gmail_oauth.py  test_newsletter_discovery.py  test_rule_repository.py
